# link_shortening

./: .coverage  .env.example  .env.loadtest  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.loadtest.yml  docker-compose.yml  entrypoint.sh  init-db.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 8df35b32ba59_init_db_and_create_user_link_linc_event_.py
img/: Locust_2026-03-23-00h14_locustfile.py_http___127.0.0.1_8001.html
src/: main.py
src/core/: config.py  logger.py  redis_client.py  security.py
src/db/: session.py
src/endpoints/: auth.py  deps.py  links.py  router.py
src/models/: base.py  click_events.py  links.py  user.py
src/schemas/: analytics.py  link.py  user.py
src/services/: link_service.py  user_service.py
tests/: conftest.py
tests/integration_test/: test_integration.py
tests/load/: locustfile.py
tests/unit/: test_link_schemas.py  test_link_service.py  test_security.py  test_user_service.py
