[project]
name = "linc-shortening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "pydantic-settings>=2.10.0",
    "uvicorn>=0.41.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=5.0.0",
    "redis[hiredis]>=7.3.0",
]


[dependency-groups]
dev = [
    "ruff>=0.4.4",
    "pre-commit>=4.5.1",
    "mypy>=1.10.0",
    "types-python-dateutil>=2.9.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.23.8",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

# ================= RUFF =================
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # warnings
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",  # line-length
    "B008"
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ruff.lint.per-file-ignores]
"src/endpoints/*.py" = ["B008"]
# ================= MYPY =================
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  #
mypy_path = "src"
# Игнорировать ошибки в миграциях и авто-генерированном коде
exclude = ["alembic/versions/.*"]


plugins = ["pydantic.mypy"]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
# ================= PYTEST =================
[tool.pytest.ini_options]
asyncio_mode = "auto"
#asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
